add: Rotating Cube