@@ -1,1 +1,7 @@
 ## Escape Java
+
+### Setup
+If running on windows, you will need to include the following VM arguments:
+```
+"vmArgs": "--add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED"
+```
